--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -18,7 +18,7 @@ tr {
   display: flex;
   flex-direction: row;
 
-  color: #a2a3a7;
+  color: #5a9aa3;
   text-transform: uppercase;
   font-size: 11px;
   background-color: #fff;
